--- a/index.html
+++ b/index.html
@@ -7,35 +7,41 @@
     <title>Web Studio</title>
 </head>
 <body>
-    <header>
-        <a href="">WEBSTUDIO</a>
+    <header> 
         <nav>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="">Studio</a></li>            
                 <li><a href="">Portfolio</a></li>                    
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <address>
+        <li><a href="mailto:info@devstudio.com">"info@devstudio.com</a></li>
+        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </address>
     </header>
 
     <main>
+    <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
-
-    <section>
-        <h3>Strategy</h3>
-        <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
-        <h3>Punctuality</h3>
-        <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-        <h3>Diligence</h3>
-        <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-        <h3>Technologies</h3>
-        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
     </section>
 
-    <section>
+    <section><h2>Quality</h2>
+        <ul>
+        <li><h3>Strategy</h3>
+        <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
+        <li><h3>Punctuality</h3>
+        <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
+        <li><h3>Diligence</h3>
+        <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
+        <li><h3>Technologies</h3>
+        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
+        </ul>
+    </section>
+
+    <section><h2>What are we doing</h2>
         <ul>
             <li><img src="./images/images/3f1205d1d2bc99a08f2351d49f36efdb.jpg"
                 alt="Sites"
@@ -52,38 +58,34 @@
         </ul>
     </section>
 
-    <section>
+    <section><h2>Our team</h2>
         <ul>
             <li><img src="./images/images/27d7cc162dfead836063691cf04a58cf.jpg"
                 alt="Mark Guerrero"
                 width="264"/>
                 <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
-            </li>
+                <p>Product Designer</p></li>            
             <li><img src="./images/images/8a9539bd306a71f0180d4ac75766361e.jpg"
                 alt="Tom Ford"
                 width="264"/>
                 <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
-            </li>
+                <p>Frontend Developer</p></li>            
             <li><img src="./images/images/210eea8d1f5ef1a5b4db4f62aba5e8e9.jpg"
                 alt="Camila Garcia"
                 width="264"/>
                 <h3>Camila Garcia</h3>
-                <p>Marketing</p>
-            </li>
+                <p>Marketing</p></li> 
             <li><img src="./images/images/c6daee5d9dff1c4f03f226cbaec0f164.jpg"
                  alt="Daniel Wilson"
                  width="264"/>
                  <h3>Daniel Wilson</h3>
-                 <p>UI Designer</p>
-            </li>
+                 <p>UI Designer</p></li>       
         </ul>
     </section>    
     </main>
 
     <footer>
-        <a href="">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
