--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             </ul>
         </nav>
         <address>
-        <li><a href="mailto:info@devstudio.com">"info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <li><a href="mailto:info@devstudio.com">"info@devstudio.com</a>
+        <a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </address>
     </header>
 
@@ -58,7 +58,7 @@
         </ul>
     </section>
 
-    <section><h2>Our team</h2>
+    <section><h2>Our Team</h2>
         <ul>
             <li><img src="./images/images/27d7cc162dfead836063691cf04a58cf.jpg"
                 alt="Mark Guerrero"
