update index html

--- a/index.html
+++ b/index.html
@@ -45,41 +45,48 @@
 
     <section><h2>What are we doing</h2>
         <ul>
-            <li><img src="./images/images/3f1205d1d2bc99a08f2351d49f36efdb.jpg"
+            <li><img src="./images/images/img.jpg"
                 alt="Sites"
-                width="360"/>
+                width="360"
+                height="300"/>
             </li>
-            <li><img src="./images/images/3c4c4fcb2a83e793cae5e43b6e5c5118.jpg"
+            <li><img src="./images/images/Rectangle 71.jpg"
                 alt="Social networks"
-                width="360"/>
+                width="360"
+                height="300"/>
             </li>
-            <li><img src="./images/images/abef81a74efa88a3d978cf41b50436ff.jpg"
+            <li><img src="./images/images/Rectangle 71 (1) (1).jpg"
                 alt="Advertising"
-                width="360"/>
+                width="360"
+                height="300"/>
             </li>
         </ul>
     </section>
 
     <section><h2>Our Team</h2>
         <ul>
-            <li><img src="./images/images/27d7cc162dfead836063691cf04a58cf.jpg"
+            <li><img src="./images/images/img.jpg"
                 alt="Mark Guerrero"
-                width="264"/>
+                width="264"
+                height="260"/>
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p></li>            
-            <li><img src="./images/images/8a9539bd306a71f0180d4ac75766361e.jpg"
+            <li><img src="./images/images/img (1).jpg"
                 alt="Tom Ford"
-                width="264"/>
+                width="264"
+                height="260"/>
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p></li>            
-            <li><img src="./images/images/210eea8d1f5ef1a5b4db4f62aba5e8e9.jpg"
+            <li><img src="./images/images/img (2).jpg"
                 alt="Camila Garcia"
-                width="264"/>
+                width="264"
+                height="260"/>
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p></li> 
-            <li><img src="./images/images/c6daee5d9dff1c4f03f226cbaec0f164.jpg"
+            <li><img src="./images/images/img (3).jpg"
                  alt="Daniel Wilson"
-                 width="264"/>
+                 width="264"
+                 height="260"/>
                  <h3>Daniel Wilson</h3>
                  <p>UI Designer</p></li>       
         </ul>
