update index html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <section><h2>What are we doing</h2>
         <ul>
-            <li><img src="./images/images/img.jpg"
+            <li><img src="./images/images/img 1 (1).jpg"
                 alt="Sites"
                 width="360"
                 height="300"/>
