--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
 
     <section><h2>What are we doing</h2>
         <ul>
-            <li><img src="./images/images/img 1 (1).jpg"
+            <li><img src="./images/images/img/img4.jpg"
                 alt="Sites"
                 width="360"
                 height="300"/>
             </li>
-            <li><img src="./images/images/Rectangle 71.jpg"
+            <li><img src="/images/images/img/Rectangle71.jpg"
                 alt="Social networks"
                 width="360"
                 height="300"/>
             </li>
-            <li><img src="./images/images/Rectangle 71 (1) (1).jpg"
+            <li><img src="./images/images/img/Rectangle711.jpg"
                 alt="Advertising"
                 width="360"
                 height="300"/>
@@ -65,25 +65,25 @@
 
     <section><h2>Our Team</h2>
         <ul>
-            <li><img src="./images/images/img.jpg"
+            <li><img src="./images/images/img/img.jpg"
                 alt="Mark Guerrero"
                 width="264"
                 height="260"/>
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p></li>            
-            <li><img src="./images/images/img (1).jpg"
+            <li><img src="./images/images/img/img1.jpg"
                 alt="Tom Ford"
                 width="264"
                 height="260"/>
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p></li>            
-            <li><img src="./images/images/img (2).jpg"
+            <li><img src="./images/images/img/img2.jpg"
                 alt="Camila Garcia"
                 width="264"
                 height="260"/>
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p></li> 
-            <li><img src="./images/images/img (3).jpg"
+            <li><img src="./images/images/img/img3.jpg"
                  alt="Daniel Wilson"
                  width="264"
                  height="260"/>
