update index html

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 width="360"
                 height="300"/>
             </li>
-            <li><img src="/images/images/img/Rectangle71.jpg"
+            <li><img src="./images/images/img/Rectangle71.jpg"
                 alt="Social networks"
                 width="360"
                 height="300"/>
